--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,8 @@ dependencies:
   mobile_scanner: ^5.1.1
   http: ^1.2.0
   speech_to_text: ^6.6.0
+  camera: ^0.10.5+9
+  google_mlkit_image_labeling: ^0.12.0
   
   # State management
   provider: ^6.1.1
